fixed draw_boxes was giving the wrong image width and height

--- a/Create_Python_Script.ipynb
+++ b/Create_Python_Script.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -107,15 +107,12 @@
     "        image_copy = self.preprocess_input(image)\n",
     "        self.net.start_async(request_id=0, inputs={self.input_name: image_copy})\n",
     "        \n",
-    "        #input_dict={self.input_name:image}  \n",
-    "        #self.net.infer(input_dict)\n",
-    "        \n",
     "        waiting = self.net.requests[0].wait(-1)\n",
     "\n",
     "        if waiting == 0:\n",
     "            output = self.net.requests[0].outputs[self.output_name]\n",
     "        \n",
-    "        coords = self.preprocess_outputs(output)\n",
+    "        coords = self.preprocess_outputs(output, image)\n",
     "        \n",
     "        return coords, self.draw_outputs(coords, image)\n",
     "    \n",
@@ -124,7 +121,8 @@
     "        TODO: This method needs to be completed by you\n",
     "        '''\n",
     "        colors = {\"BLUE\": (255,0,0), \"GREEN\": (0,255,0), \"RED\": (0,0,255)}\n",
-    "        out_color = colors.get(\"BLUE\")\n",
+    "        out_color = colors.get(\"RED\")\n",
+    "        thickness = 2\n",
     "        \n",
     "        #coords = preprocess_outputs(coords)\n",
     "        \n",
@@ -134,11 +132,11 @@
     "            xmax = coord[2]\n",
     "            ymax = coord[3]\n",
     "            \n",
-    "            cv2.rectangle(image, (xmin, ymin), (xmax, ymax), out_color, 1)\n",
+    "            cv2.rectangle(image, (xmin, ymin), (xmax, ymax), out_color, thickness)\n",
     "\n",
     "        return image\n",
     "\n",
-    "    def preprocess_outputs(self, outputs):\n",
+    "    def preprocess_outputs(self, outputs, image):\n",
     "        '''\n",
     "        TODO: This method needs to be completed by you\n",
     "        '''\n",
@@ -147,12 +145,16 @@
     "        #initials (1920, 1080)\n",
     "        #output_shape [1, 1, 200, 7]\n",
     "        #input_shape [1, 3, 320, 544]\n",
+    "        #image.shape (1080, 1920, 3)\n",
     "        \n",
     "        #print('outputshape')\n",
     "        #print(self.output_shape)\n",
     "        #print(self.input_shape)\n",
-    "        n, c, h, w = self.output_shape\n",
     "        \n",
+    "        #print(\"image.shape\", image.shape)\n",
+    "        #n, c, h, w = self.output_shape\n",
+    "        \n",
+    "        h, w = image.shape[0:2]\n",
     "        coords = []\n",
     "        \n",
     "        for box in outputs[0][0]: \n",
@@ -176,7 +178,7 @@
     "        \n",
     "        image = cv2.resize(image, (w, h))\n",
     "        image = image.transpose((2, 0, 1))\n",
-    "        image = image.reshape((1, 3, h, w))\n",
+    "        image = image.reshape((n, c, h, w))\n",
     "        return image\n",
     "\n",
     "\n",
